package org.yyb.responsibilitychain;

public class PurchaseRequest {

    private final int type;
    private final float price;
    private final int id;

    public PurchaseRequest(int type, float price, int id) {
        this.type = type;
        this.price = price;
        this.id = id;
    }

    public int getType() {
        return type;
    }

    public float getPrice() {
        return price;
    }

    public int getId() {
        return id;
    }
}
